--- a/promptly/package.json
+++ b/promptly/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.1",
     "@google/generative-ai": "^0.21.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
@@ -17,6 +18,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "22.13.5",
+    "@types/react": "19.0.10",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
