--- a/promptly/package.json
+++ b/promptly/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.1",
     "@google/generative-ai": "^0.21.0",
+    "@supabase/supabase-js": "^2.49.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
@@ -23,6 +24,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1"
   }
 }
